--- a/.github/codeql/my-codeql-config.yml
+++ b/.github/codeql/my-codeql-config.yml
@@ -1,3 +1,9 @@
 name: "My Codeql config"
 
-disable-default-queries: false
+disable-default-queries: true
+
+#packs:
+#  - smiddy007/my-codeql-pack
+
+queries:
+  - uses: ./my-codeql-pack/my-codeql-queries/InsufficientPasswordHash_v2.ql
